Got tabs working using state. Spotted some issues with zoom on mobile that will need fixing.

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ h2 {
 
 body {
     margin: 0px;
+    font-family: 'Muli', sans-serif;
     /*background: #EFEFEF;*/
 }
 
@@ -14,8 +15,6 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin-top:auto;
-    margin-bottom:auto;
 }
 
 .calc-extended {
@@ -73,8 +72,8 @@ body {
 }
 
 .sidebar{
-    width: calc(100% - 40px);
-    padding-left: 40px;
+    width: calc(100% - 80px);
+    padding: 0 40px;
     position: absolute;
     top: 46px;
     left: 0px;
@@ -110,13 +109,14 @@ body {
     flex: 1;
     text-align: center;
     font-size: 2.25em;
+    cursor: pointer;
 }
 
 .button:active {
     background-color: rgb(157, 211, 189);
   }
 
-  .button.orange {
+.orange {
     color: #FE6B0E;
 }
 
@@ -137,10 +137,32 @@ body {
     flex-direction: column;
 }
 
-@media (min-width: 867px) {
+.tab-content {
+    margin-top: 20px;
+    font-size: 1rem;
+    line-height: 20px;
+    font-weight: 700;
+}
+
+.tab-line{
+    margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.tab {
+    cursor: pointer;
+}
+
+.tab.bold {
+    font-weight: 700;
+}
+
+@media (min-width: 920px) {
     .calc-extended {
         max-height: 652px;
-        max-width: 867px;
+        max-width: 920px;
         border-radius: 10px;
         justify-content: left;
         display: flex;
